Add `local` property to `testing.urls`
The test:a11y script is expecting to find the `local` property with a value in order to run. Out of the box, this doesn't work as you will receive a `TypeError: Cannot read property 'url' of undefined`.

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   },
   "testing": {
     "urls": {
+      "local": "http://tenup-scaffold.test",
       "homepage": "http://tenup-scaffold.test",
       "article": "http://tenup-scaffold.test/hello-world",
       "search-results": "http://tenup-scaffold.test/?s=hello"
